--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Binary to Decimal Converter</h1>
+    <h1>Binary Bulb</h1>
     <div class="bulb-row" id="bulbRow"></div>
     <div class="output" id="decimalOutput">Decimal: 0</div>
     <script src="script.js"></script>
